<resources>
    <string name="app_name">Assignment1</string>
    <string name="action_settings">Settings</string>

    <!-- menu items -->
    <string name="action_about">About</string>

    <!-- about dialog -->
    <string name="author">Shehnazdeep Kaur, Sheridan College, 2022</string>

    <!--Prize Items-->
    <string name="TV">TV</string>
    <string name="IPHONE">IPHONE</string>
    <string name="TABLET">TABLET</string>
    <string name="IPAD">IPAD</string>
    <string name="CHOCOLATES">CHOCOLATES</string>
    <string name="HEADSET">HEADSET</string>
    <string name="SOFA">SOFA</string>
    <string name="MICROWAVE">MICROWAVE</string>


    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Play</string>
    <string name="second_fragment_label">Result</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="choose_your_box">Choose your Box!</string>
    <string name="box_1">Box 1</string>
    <string name="box_2">Box 2</string>
    <string name="box_3">Box 3</string>
    <string name="play">Play</string>
    <string name="textview">TextView</string>
    <string name="game_result">Game Result</string>
    <string name="make_your_choice">Make Your Choice</string>
    <string name="the_box_you_have_selected_have">The Box you have selected have</string>
    <string name="box_1_contains">Box 1 contains :~</string>
    <string name="something">something</string>
    <string name="box_2_contains">Box 2 contains :~</string>
    <string name="box_3_contains">Box 3 contains :~</string>
    <string name="your_prize_is">Your Prize is :~</string>
    <string name="tv">TV</string>
    <string name="try_again">Try Again!</string>
    <string name="about">About</string>
</resources>