<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ResultFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:paddingTop="50dp"
        android:text="@string/game_result"
        android:textColor="#448AFF"
        android:textSize="34sp"
        android:textStyle="bold|italic" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/box1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/box_1_contains"
                android:textColor="#CA1955"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/box1_contain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="serif-monospace"
                android:text="@string/something"
                android:textColor="#047359"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/box2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/box_2_contains"
                android:textColor="#CA1955"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/box2_contain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="serif-monospace"
                android:text="@string/something"
                android:textColor="#047359"
                android:textSize="20sp" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/box3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="cursive"
                android:text="@string/box_3_contains"
                android:textColor="#CA1955"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/box3_contain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="serif-monospace"
                android:text="@string/something"
                android:textColor="#047359"
                android:textSize="20sp" />


        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/result_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="#DFF1F1"
            android:fontFamily="cursive"
            android:text="@string/your_prize_is"
            android:textColor="#2979FF"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/result_choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:fontFamily="cursive"
            android:text="@string/tv"
            android:textColor="#78082F"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

    <Button
        android:id="@+id/button_try_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:backgroundTint="#E6C4EC"
        android:fontFamily="cursive"
        android:text="@string/try_again"
        android:textColor="#090F30"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>